--- a/fame/style.css
+++ b/fame/style.css
@@ -13,6 +13,7 @@ body {
   position: relative;
   min-height: 100vh;
   overflow: hidden;
+  user-select: none;
 }
 
 /* Blurred background */
@@ -232,3 +233,4 @@ body::before {
   max-width: 300px;
   opacity: 0.8;
 }
+
