--- a/fame/style.css
+++ b/fame/style.css
@@ -28,8 +28,8 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("https://i.imgur.com/RWCfv1m.png") center/cover no-repeat;
-  filter: blur(12px);
+  background: url("https://i.imgur.com/0nlSoLn.png") no-repeat center center;
+  filter: blur(2px);
   transform: scale(1.05); 
   z-index: -1; 
 
@@ -237,5 +237,6 @@ body::before {
   max-width: 300px;
   opacity: 0.8;
 }
+
 
 
